--- a/less/actor.less
+++ b/less/actor.less
@@ -1,7 +1,7 @@
 @import  "./variables.less";
 
 .fantasycraft.sheet.actor {
-    min-width: 756px;
+    min-width: 761px;
     min-height: 680px;
 
     //// Sheet Header ////
@@ -122,16 +122,16 @@
     }
 
     .tab.attributes {
-    overflow: hidden;
+        overflow: hidden;
     }  
 
     .tab.spellcasting {
-    overflow-y: hidden; 
+        overflow-y: hidden; 
     }
 
     .sheet-body .tab {
-    padding: 0 5px;
-    overflow: hidden auto;
+        padding: 0 5px;
+        overflow: hidden auto;
     }
 
     ul.ability-scores {
@@ -343,6 +343,15 @@
         border-radius: 1px;
         font-weight: 200;
         font-size: 12px;
+    }
+
+    
+    .shorthand-icon
+    {
+        padding: 0.5px 4px;
+        border: 1px groove black;
+        border-radius: 50%;
+        background-color: white;
     }
 
     li.centreItems
