--- a/templates/apps/npcApps/npc-qualities.handlebars
+++ b/templates/apps/npcApps/npc-qualities.handlebars
@@ -13,7 +13,7 @@
                     {{ability.system.number}}
                 {{/compare}}
                 </span>
-                <span style="text-align: right;">
+                <span class="right-align-text">
                     <a class="editItem">
                         <i class="fas fa-edit"></i>
                     </a>
@@ -31,7 +31,7 @@
         {{#each feats as |feat id|}}
             <div class="item ownedItem item-card flexrow" data-item-id="{{_id}}" data-item-name="{{feat.name}}">
                 <span class="flex5">{{feat.name}}</span>
-                <span style="text-align: right;">
+                <span class="right-align-text">
                     <a class="editItem">
                         <i class="fas fa-edit"></i>
                     </a>
@@ -59,7 +59,7 @@
                     {{/select}}
                 </select>
 
-                <span style="text-align: right;">
+                <span class="right-align-text">
                     <a class="editItem">
                         <i class="fas fa-edit"></i>
                     </a>
@@ -77,7 +77,7 @@
         {{#each tricks as |trick id|}}
             <div class="item ownedItem item-card flexrow" data-item-id="{{_id}}" data-item-name="{{trick.name}}">
                 <span class="flex5">{{trick.name}}</span>
-                <span style="text-align: right;">
+                <span class="right-align-text">
                     <a class="editItem">
                         <i class="fas fa-edit"></i>
                     </a>
@@ -116,7 +116,7 @@
                 </select>
                 {{/compare}}
 
-                <span style="text-align: right;">
+                <span class="right-align-text">
                     <a class="editItem">
                         <i class="fas fa-edit"></i>
                     </a>
