--- a/templates/apps/resistances.hbs
+++ b/templates/apps/resistances.hbs
@@ -2,7 +2,7 @@
     <section>
         {{#each choices as |value resistance|}}
             <div class="item ownedItem item-card flexrow">
-                <span class="flex5" style="text-transform: capitalize;">{{localize resistance}}</span>
+                <span class="flex5 capitalize">{{localize resistance}}</span>
                 <span>
                     {{value}}
                 </span>
