--- a/templates/chat/feature-chat.hbs
+++ b/templates/chat/feature-chat.hbs
@@ -3,7 +3,9 @@
     <header class="flexxol card-header">
       <div>
         <div>
-           <div><strong>{{name}}</strong></div>
+        <h1 class="boxline chat-window-header" style="margin: 0px">
+          <span>{{name}}</span>
+        </h1>
             <div>
                 {{!if feat include prereq}}
                 {{#compare type "feat" operator="=="}}
