--- a/templates/chat/spell-chat.hbs
+++ b/templates/chat/spell-chat.hbs
@@ -1,7 +1,9 @@
 <div class="chat-card spell" data-option-id="{{_id}}" data-actor-id="{{actor._id}}">
 
     <header class="flexxol card-header">
-        <div><strong>{{name}}</strong></div>
+        <h2 class="boxline chat-window-header headertext" style="margin: 0px, font-size: 1.6vmin">
+          <span>{{localize "fantasycraft.spellcasting"}} - {{name}}</span>
+        </h2>
     </header>
 
     <div class="card-buttons">
