--- a/templates/gm-screen.handlebars
+++ b/templates/gm-screen.handlebars
@@ -1,42 +1,42 @@
 <div class="fantasycraft">
-    <h1 style="text-align: center">
+    <h1 class="center-text">
         <span style="font-size: 20px">{{localize "fantasycraft.fantasycraft"}}</span>
-            <div class="tooltip" style="border-radius: 50%;">?
-                <div class="tooltiptext" style="width: 350px;">
+            <div class="tooltip circular-border" >?
+                <div class="tooltiptext absolute-position" style="width: 350px;">
                     This window be re-opened from the top left corner of any NPC page. However this window will not retain any information if closed (Number of players, Menace level and GM AD will be reset).
                 </div>
             </div>
         <br><span style="font-size: 14px">{{localize "fantasycraft.gmControls"}}</span>
     </h1>
-    <section style="text-align: center">
+    <section class="center-text">
         <div>
-            <a class="newScene" style="float: center">{{localize "fantasycraft.newScene"}}</a>
-            <div class="tooltip" style="border-radius: 50%;">?
-                <div class="tooltiptext" style="width: 350px;">
+            <a class="newScene">{{localize "fantasycraft.newScene"}}</a>
+            <div class="tooltip circular-border" >?
+                <div class="tooltiptext absolute-position" style="width: 350px;">
                     New Scene: Resets spell points on arcane casters and resets tricks that are used per scene. non-trick abilities do not currently track usage but will be implimented in the future.
                 </div>
             </div>
         </div>
         <div>
-            <a class="newSession" style="float: center">{{localize "fantasycraft.newSession"}}</a>
-            <div class="tooltip" style="border-radius: 50%;">?
-                <div class="tooltiptext" style="width: 350px;">
+            <a class="newSession">{{localize "fantasycraft.newSession"}}</a>
+            <div class="tooltip circular-border" >?
+                <div class="tooltiptext absolute-position" style="width: 350px;">
                     New Session: Resets Action Dice and resets tricks that are used per session. non-trick abilities do not currently track usage but will be implimented in the future.
                 </div>
             </div>
         </div>
         <div>
-            <a class="newAdventure" style="float: center">{{localize "fantasycraft.newAdventure"}}</a>
-            <div class="tooltip" style="border-radius: 50%;">?
-                <div class="tooltiptext" style="width: 350px;">
+            <a class="newAdventure">{{localize "fantasycraft.newAdventure"}}</a>
+            <div class="tooltip circular-border" >?
+                <div class="tooltiptext absolute-position" style="width: 350px;">
                     New Adventure: Converts coin in hand to stake and resets tricks that are used per Adventure. non-trick abilities do not currently track usage but will be implimented in the future.
                 </div>
             </div>
         </div>
         <div>
-            <a class="awardAD" style="float: center">{{localize "fantasycraft.awardActionDie"}}</a>
-            <div class="tooltip" style="border-radius: 50%;">?
-                <div class="tooltiptext" style="width: 350px;">
+            <a class="awardAD">{{localize "fantasycraft.awardActionDie"}}</a>
+            <div class="tooltip circular-border" >?
+                <div class="tooltiptext absolute-position" style="width: 350px;">
                     Award an Action Dice: Requires one or more tokens to be targeted. increases the AD of the targeted player(s) by 1.
                 </div>
             </div>
@@ -62,18 +62,18 @@
         </div>
         <div>
             <span>Roll Action Dice</span>
-            <div class="tooltip" style="border-radius: 50%;">?
-                <div class="tooltiptext" style="width: 350px;">
+            <div class="tooltip circular-border" >?
+                <div class="tooltiptext absolute-position" style="width: 350px;">
                     Action Dice: If a token is selected when an AD is rolled from this window it will check to see if that token has any AD modifiers. 
                 </div>
             </div>
             <div class="flexrow">
-                <a class="rollAD" style="float: center">{{localize "fantasycraft.d4"}}</a>
-                <a class="rollAD" style="float: center">{{localize "fantasycraft.d6"}}</a>
-                <a class="rollAD" style="float: center">{{localize "fantasycraft.d8"}}</a>
-                <a class="rollAD" style="float: center">{{localize "fantasycraft.d10"}}</a>
-                <a class="rollAD" style="float: center">{{localize "fantasycraft.d12"}}</a>
-                <a class="rollAD" style="float: center">{{localize "fantasycraft.d20"}}</a>
+                <a class="rollAD">{{localize "fantasycraft.d4"}}</a>
+                <a class="rollAD">{{localize "fantasycraft.d6"}}</a>
+                <a class="rollAD">{{localize "fantasycraft.d8"}}</a>
+                <a class="rollAD">{{localize "fantasycraft.d10"}}</a>
+                <a class="rollAD">{{localize "fantasycraft.d12"}}</a>
+                <a class="rollAD">{{localize "fantasycraft.d20"}}</a>
             </div>
         </div>
     </section>
