--- a/templates/items/parts/effects.handlebars
+++ b/templates/items/parts/effects.handlebars
@@ -8,7 +8,7 @@
             {{localize "fantasycraft.reputationAdjustment"}}
             <select name="system.type">
             {{#select item.system.type}}
-                <option value="0">{{localize "fantasycraft.none"}}</option>
+                <option value="0">{{localize "fantasycraft.noEntry"}}</option>
                 <option value="5">{{localize "fantasycraft.oneHanded"}}</option>
                 <option value="10">{{localize "fantasycraft.twoHanded"}}</option>
                 <option value="20">{{localize "fantasycraft.stationary"}}</option>
