--- a/templates/items/parts/spell-customization.handlebars
+++ b/templates/items/parts/spell-customization.handlebars
@@ -220,7 +220,7 @@
             <label>{{localize "fantasycraft.damageScaling"}}</label>
             <select name="system.damage.scaling">
                 {{#select item.system.damage.scaling}}
-                    <option value="none">{{localize "fantasycraft.none"}}</option>
+                    <option value="none">{{localize "fantasycraft.noEntry"}}</option>
                     <option value="1">{{localize "fantasycraft.perCastingLevel"}}</option>
                     <option value="2">{{localize "fantasycraft.per2CastingLevels"}}</option>
                     <option value="3">{{localize "fantasycraft.per3CastingLevels"}}</option>
@@ -245,7 +245,7 @@
             <div>
                 <select name="system.damage.secondaryDamage">
                     {{#select item.system.damage.secondaryDamage}}
-                        <option value="none">{{localize "fantasycraft.none"}}</option>
+                        <option value="none">{{localize "fantasycraft.noEntry"}}</option>
                         <option value="d3">{{localize "fantasycraft.d3"}}</option>
                         <option value="d4">{{localize "fantasycraft.d4"}}</option>
                         <option value="d6">{{localize "fantasycraft.d6"}}</option>
