--- a/templates/items/trick-sheet.handlebars
+++ b/templates/items/trick-sheet.handlebars
@@ -157,7 +157,7 @@
                 <label>{{localize "fantasycraft.failurePenalty"}}</label>
                 <select name="system.effect.failurePenalty">
                     {{#select item.system.effect.failurePenalty}}
-                        <option value="none">{{localize "fantasycraft.none"}}</option>
+                        <option value="none">{{localize "fantasycraft.noEntry"}}</option>
                         <option value="flatFooted">{{localize "fantasycraft.flatFooted"}}</option>
                         <option value="sprawled">{{localize "fantasycraft.sprawled"}}</option>
                     {{/select}}
