--- a/templates/partials/attack-part.hbs
+++ b/templates/partials/attack-part.hbs
@@ -1,4 +1,4 @@
-<div class="item ownedItem flexrow" data-item-id="{{id}}" data-item-name="{{name}}">
+<li class="item ownedItem flexrow" data-item-id="{{id}}" data-item-name="{{name}}">
     <div class="flex2">
         <a class="roll-natural-attack" data-roll-info='{{id}}'>
             <i class="fas fa-dice-d20"></i>
@@ -31,4 +31,4 @@
             <i class="fas fa-trash"></i>
         </a>
     </div>
-</div>
+</li>
