--- a/templates/partials/spell-table.hbs
+++ b/templates/partials/spell-table.hbs
@@ -12,7 +12,7 @@
         </div>
     </td>
     <td>
-        <div class="tooltip" style="border: none">
+        <div class="tooltip" style="width: 100px; background: inherit; border: none">
             <div class="item" data-item-id="{{id}}" data-item-name="{{name}}">
                 <a class="spellCard">{{name}}</a>
             </div>
@@ -158,7 +158,7 @@
         {{/if}}
         {{/if}}
         {{else}}
-        {{localize "fantasycraft.none"}}
+        {{localize "fantasycraft.noEntry"}}
     {{/if}}
     </td>
     <td class="table-item">{{system.preparationCost}}</td>
