--- a/templates/partials/weapon-part.hbs
+++ b/templates/partials/weapon-part.hbs
@@ -1,4 +1,4 @@
-<div class="item ownedItem" data-item-id="{{id}}" data-item-name="{{name}}">
+<li class="item ownedItem" data-item-id="{{id}}" data-item-name="{{name}}">
     <div class="flexrow">
         <div class="flex2">
             <a class="roll-weapon" data-roll-info='{{id}}'>
@@ -61,4 +61,4 @@
         </span>
     </div>
     {{/compare}}
-</div>
+</li>
