--- a/less/general.less
+++ b/less/general.less
@@ -101,25 +101,49 @@
         font-size: 13px; 
         font-weight: normal;
         display: inline-block;
-    }
-
-    .tooltip .tooltiptext {
-        visibility: hidden;
-        background-color: floralwhite;
-        border: 2px outset tan;
-        color: black;
-        text-align: center;
-        padding: 5px 0;
-        border-radius: 6px;
         
-        /* Position the tooltip text - see examples below! */
-        position: absolute;
-        z-index: 1;
+        &.remove-background
+        {
+          background-color: initial;
+          border: none;
+        }
+
+        &.circular-border
+        {
+          border-radius: 50%;
+        }
+
+        .tooltiptext 
+        {
+          visibility: hidden;
+          background-color: floralwhite;
+          border: 2px outset tan;
+          color: black;
+          text-align: center;
+          padding: 5px 0;
+          border-radius: 6px;
+          font-family: signika; 
+          width: fit-content;
+
+          z-index: 1;
+          &.absolute-position
+          {
+            position: absolute;
+          }
+  
+          &.relative-position
+          {
+            position: relative;
+          }
+        }
+
+
+        &:hover .tooltiptext 
+        {
+          visibility: visible;
+        }
     }
-    .tooltip:hover .tooltiptext {
-       visibility: visible;
-    }
-} 
+  } 
 
 .sheet {
     .window-content {
@@ -142,6 +166,13 @@
     /*  Element Styles                           */
     /* ----------------------------------------- */
   
+    table{
+      th
+      {
+        padding: 0 0.25em 0.35em;
+        text-align: center;
+      }
+    }
     
     details
     {
@@ -381,7 +412,13 @@
       margin-bottom: 5px;
       .title-font();
       text-align: center;
-  
+
+      &.hide
+      {
+        visibility: hidden;
+        max-height: 0px;  
+      }
+
       .item {
         height: 30px;
         line-height: 32px;
@@ -558,7 +595,7 @@ h4.ability-name{
 
 h4.extra-space
 {
-  line-height: 35px;
+  line-height: 23px;
   padding-top: 4px;
   padding-bottom: 2px;
 }
@@ -613,7 +650,28 @@ textarea.text-area
   justify-content: center;
 }
 
+.left-align-text
+{
+  text-align: left;
+}
+
+.right-align-text
+{
+  text-align: right;
+}
+
 .center-text
 {
   text-align: center;
+}
+
+.capitalize 
+{
+  text-transform: capitalize;
+}
+
+.small-font
+{
+  font-size: 9.5px;
+  white-space: nowrap;
 }
