--- a/less/item.less
+++ b/less/item.less
@@ -181,6 +181,7 @@
   {
     text-align: center;
     font-size: x-small;
+    font-family: 'Signika';
   }
 
   .sub-navigation
@@ -320,12 +321,13 @@
     flex: 0 0 98px;
   } 
 
-  .capitalize 
-  {
-    text-transform: capitalize;
-  }
   select 
   {
     font-size: 16px;
+  }
+
+  .top-padding
+  {
+    padding-top: 3px;
   }
 }
