--- a/templates/apps/armour-resistances.hbs
+++ b/templates/apps/armour-resistances.hbs
@@ -4,7 +4,7 @@
     {{#each choices as |k v|}}
         <div class="form-group item-customization-section">
             <label>{{localize k}}</label>
-            <input style="max-width: 50px" name="resistanceValue" value="0"/>
+            <input class="mediumField" name="resistanceValue" value="0"/>
         </div>
     {{/each}}
 
