--- a/templates/items/weapon-sheet.handlebars
+++ b/templates/items/weapon-sheet.handlebars
@@ -42,7 +42,7 @@
 
     <section class="sheet-body">
 
-        <div class="tab attributes flexcol" data-group="primary" data-tab="weapon-sheet">
+        <div class="tab attributes" data-group="primary" data-tab="weapon-sheet">
           {{!-- This is just a display sheet, all inputs are done on the weapon customization tab --}}
           <table>
               <tr>
